Closed Bug 418658 Opened 18 years ago Closed 18 years ago

fixing build bustages on windows mobile

Categories

(Core :: Widget: Win32, defect)

All
Windows Mobile 6 Standard
defect
Not set
blocker

Tracking

()

RESOLVED FIXED

People

(Reporter: dougt, Assigned: dougt)

Details

Attachments

(1 file)

Attached patch patch v.1Splinter Review
misc changes: IDropTargetHelper is not defined on windows mobile the :: namespace on GlobalLock on windows mobile confuses the compiler removing hardware key overloading in nswindow.cpp ifdef'ing code that calls OleInitialize theme code hardcoding correct value as GetSystemMetrics doesn't know about the Menu Check size
Attachment #304527 - Flags: review?(emaijala)
Attachment #304527 - Flags: review?(emaijala) → review+
Attachment #304527 - Flags: approval1.9?
Comment on attachment 304527 [details] [diff] [review] patch v.1 a=beltzner for 1.9
Attachment #304527 - Flags: approval1.9? → approval1.9+
Checking in widget/src/windows/nsDataObj.cpp; /cvsroot/mozilla/widget/src/windows/nsDataObj.cpp,v <-- nsDataObj.cpp new revision: 1.88; previous revision: 1.87 done Checking in widget/src/windows/nsNativeDragTarget.h; /cvsroot/mozilla/widget/src/windows/nsNativeDragTarget.h,v <-- nsNativeDragTarget.h new revision: 1.14; previous revision: 1.13 done Checking in widget/src/windows/nsNativeThemeWin.cpp; /cvsroot/mozilla/widget/src/windows/nsNativeThemeWin.cpp,v <-- nsNativeThemeWin.cpp new revision: 3.101; previous revision: 3.100 done Checking in widget/src/windows/nsWindow.cpp; /cvsroot/mozilla/widget/src/windows/nsWindow.cpp,v <-- nsWindow.cpp new revision: 3.727; previous revision: 3.726 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: