windows widget fixups for windows mobile.  bug 418658, r=ere, a=beltzner