widget/src/windows/nsNativeDragTarget.h
@@ -42,9 +42,11 @@
 #include "nsIDragSession.h"
 #include <ole2.h>
 #include <shlobj.h>
+#ifndef WINCE
 #ifndef IDropTargetHelper
 #include <shobjidl.h> // Vista drag image interfaces
 #endif
+#endif  // WINCE
 
 class nsIDragService;
 class nsIWidget;
@@ -114,8 +116,9 @@ protected:
   nsIDragService * mDragService;
 
   // Drag target helper 
+#ifndef WINCE
   IDropTargetHelper * mDropTargetHelper;
-
+#endif
 };
 
 #endif // _nsNativeDragTarget_h_
